chore: Add utility class for box shadow and update npm dependencies

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+    .box-shadow-sw {
+        box-shadow: 0 1px #8f8f8f;
+    }
+}
