--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,33 +5,46 @@
 @layer utilities {
 
     *:focus {
-            outline: none !important;
-        }
-    
-        /* Tailwind-specific: Remove focus and ring */
-        *:focus-visible {
-            outline: none !important;
-            /* Remove the 'ring' property */
-        }
+        outline: none !important;
+    }
 
-        
+    /* Tailwind-specific: Remove focus and ring */
+    *:focus-visible {
+        outline: none !important;
+        /* Remove the 'ring' property */
+    }
+
+
     .box-shadow-sw {
         box-shadow: 0 1px #a7a7a7;
     }
-        .inner-box-shadow-sw {
-            box-shadow: inset 0 1px #a7a7a7;
-            /* Inner shadow only at the top */
-        }
+
+    .inner-box-shadow-sw {
+        box-shadow: inset 0 1px #a7a7a7;
+        /* Inner shadow only at the top */
+    }
 
     .container-sw {
-        @apply container mx-auto max-w-[59rem] ;
+        @apply container mx-auto max-w-[59rem];
     }
 
     .bg-sw {
         @apply bg-gradient-to-b from-white to-gray-100;
     }
 
-        .sliced-div {
-                clip-path: polygon(0 0, 90% 0,/*  */ 100% 100%, 0% 100%);
-        }
+    .sliced-div {
+        clip-path: polygon(0 0, 90% 0,
+                /*  */
+                100% 100%, 0% 100%);
+    }
+
+    .clip-ribbon {
+        clip-path: polygon(0 0, 100% 0, 100% 75%, 50% 100%, 0 75%);
+    }
+
+    .clip-chevron {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 50% 100%, 0% 75%);
+}
+
+    
 }
