--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,6 +44,10 @@
 
     .clip-chevron {
     clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 50% 100%, 0% 75%);
+
+}
+.hexagon-shape {
+    clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
 }
 
     
